# user-crud

./: Crud user.postman_collection.json  README.md  pg-values.yaml  pyproject.toml
.docker/: Dockerfile
.kube/: configmap.yml  deployment.yml  ingress.yml  job.yml  pg-secret.yml  service.yml
alembic/: env.py
alembic/versions/: cf340956dcfe_initial.py
src/: config.py  database.py  dependencies.py  main.py
src/users/: dependencies.py  models.py  routes.py  schemas.py  service.py
